# simpleserial-rs

./: .gitignore  Cargo.toml  build.rs  makefile
c-lib/: .gitignore
c-lib/sim/: makefile
c-lib/simpleserial/: Makefile.simpleserial
examples/: key-inverter.rs
firmware/: Makefile.inc
src/: capture_to_target.rs  firmware.rs  hex_ascii.rs  lib.rs  target_to_capture.rs  util.rs  v2.rs
