[package]
name = "simpleserial-rs"
version = "0.1.0"
authors = ["Gijs Burghoorn <g.burghoorn@gmail.com>"]
edition = "2018"
build = "build.rs"
rustc-link-lib = ["hal"]

[dependencies]
crc8-rs = "1.1"
cobs-rs = "1.1.1"
array-utils = { version = "0.1", features = ["superimpose", "drift", "resize"] }
lazy_static = { version = "1.4.0", optional = true }

[[example]]
name = "key-inverter"

[features]
default = []
simulated = ["lazy_static"]
